@@ -7,11 +7,12 @@ import com.fasterxml.jackson.annotation.JsonFilter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
+import org.springframework.boot.context.properties.NestedConfigurationProperty;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -26,6 +27,7 @@ import java.util.stream.Stream;
 @Accessors(chain = true)
 @JsonFilter("HazelcastClusterProperties")
 public class HazelcastNetworkClusterProperties implements Serializable {
+    @Serial
     private static final long serialVersionUID = -8474968308106013185L;
 
     /**
@@ -39,12 +41,13 @@ public class HazelcastNetworkClusterProperties implements Serializable {
 
     /**
      * Sets the well known members.
-     * If members is empty, calling this method will have the same effect as calling clear().
-     * A member can be a comma separated string, e..g '10.11.12.1,10.11.12.2' which
-     * indicates multiple members are going to be added.
+     * If members is empty, calling this method will have the same effect as calling {@code clear()}.
+     * A member can be a comma separated string, e..g {@code 10.11.12.1,10.11.12.2} which
+     * indicates multiple members are going to be added. The list of members must include ALL
+     * CAS server node, including the current node that owns this configuration.
      */
     @RequiredProperty
-    private List<String> members = Stream.of("localhost").collect(Collectors.toList());
+    private List<String> members = Stream.of("localhost").toList();
 
     /**
      * You may also want to choose to use only one port. In that case,
@@ -86,7 +89,7 @@ public class HazelcastNetworkClusterProperties implements Serializable {
      * is enabled (it is disabled by default) and if Hazelcast cannot find
      * an matching interface, then it will print a message on
      * the console and will not start on that node.
-     *
+     * <p>
      * Interfaces can be separated by a comma.
      */
     private String networkInterfaces;
@@ -97,4 +100,12 @@ public class HazelcastNetworkClusterProperties implements Serializable {
      * set this setting to false.
      */
     private boolean ipv4Enabled = true;
+
+    /**
+     * You can use the SSL (Secure Sockets Layer) protocol to
+     * establish an encrypted communication across your Hazelcast
+     * cluster with key stores and trust stores.
+     */
+    @NestedConfigurationProperty
+    private HazelcastNetworkSslProperties ssl = new HazelcastNetworkSslProperties();
 }
