@@ -1,5 +1,6 @@
 package org.apereo.cas.configuration.model.support.saml.idp;
 
+import org.apereo.cas.configuration.support.DurationCapable;
 import org.apereo.cas.configuration.support.RequiresModule;
 
 import com.fasterxml.jackson.annotation.JsonFilter;
@@ -9,6 +10,7 @@ import lombok.Setter;
 import lombok.experimental.Accessors;
 import lombok.val;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -29,6 +31,7 @@ import java.util.Map;
 @JsonFilter("SamlIdPResponseProperties")
 public class SamlIdPResponseProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 7200477683583467619L;
 
     /**
@@ -40,18 +43,13 @@ public class SamlIdPResponseProperties implements Serializable {
      * Time unit in seconds used to skew authentication dates such
      * as valid-from and valid-until elements.
      */
-    private int skewAllowance = 15;
+    @DurationCapable
+    private String skewAllowance = "PT30S";
 
     /**
      * Whether error responses should be signed.
      */
     private boolean signError;
-
-    /**
-     * The default authentication context class to include in the response
-     * if none is specified via the service.
-     */
-    private String defaultAuthenticationContextClass = "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport";
 
     /**
      * Indicates the default name-format for all attributes
@@ -81,7 +79,7 @@ public class SamlIdPResponseProperties implements Serializable {
                     val values = Splitter.on("->").splitToList(format);
 
                     if (values.size() == 2) {
-                        nameFormats.put(values.get(0), values.get(1));
+                        nameFormats.put(values.getFirst(), values.get(1));
                     }
                 }));
         return nameFormats;
