@@ -7,6 +7,8 @@ import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
+import java.util.stream.IntStream;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
@@ -15,19 +17,31 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Misagh Moayyed
  * @since 5.3.0
  */
-@Tag("Authentication")
-public class AuthenticationCredentialTypeMetaDataPopulatorTests {
+@Tag("AuthenticationMetadata")
+class AuthenticationCredentialTypeMetaDataPopulatorTests {
     private final AuthenticationCredentialTypeMetaDataPopulator populator =
         new AuthenticationCredentialTypeMetaDataPopulator();
 
     @Test
-    public void verifyPopulator() {
+    void verifyPopulator() throws Throwable {
         val credentials = new UsernamePasswordCredential();
         val builder = CoreAuthenticationTestUtils.getAuthenticationBuilder();
-        this.populator.populateAttributes(builder, new DefaultAuthenticationTransactionFactory().newTransaction(credentials));
+        this.populator.populateAttributes(builder, CoreAuthenticationTestUtils.getAuthenticationTransactionFactory().newTransaction(credentials));
         val auth = builder.build();
         assertEquals(
             credentials.getClass().getSimpleName(),
-            auth.getAttributes().get(Credential.CREDENTIAL_TYPE_ATTRIBUTE).get(0));
+            auth.getAttributes().get(Credential.CREDENTIAL_TYPE_ATTRIBUTE).getFirst());
+    }
+
+    @Test
+    void verifyPopulatorMultipleTimes() throws Throwable {
+        val credentials = new UsernamePasswordCredential();
+        val builder = CoreAuthenticationTestUtils.getAuthenticationBuilder();
+        IntStream.rangeClosed(1, 2)
+            .forEach(i -> populator.populateAttributes(builder, CoreAuthenticationTestUtils.getAuthenticationTransactionFactory().newTransaction(credentials)));
+        val auth = builder.build();
+        val result = auth.getAttributes().get(Credential.CREDENTIAL_TYPE_ATTRIBUTE);
+        assertNotNull(result);
+        assertEquals(2, result.size());
     }
 }
