@@ -1,24 +1,29 @@
 package org.apereo.cas.web.support.mgmr;
 
+import org.apereo.cas.authentication.adaptive.geo.GeoLocationService;
 import org.apereo.cas.configuration.model.support.cookie.PinnableCookieProperties;
-import org.apereo.cas.util.HttpRequestUtils;
+import org.apereo.cas.util.RegexUtils;
 import org.apereo.cas.util.crypto.CipherExecutor;
+import org.apereo.cas.util.http.HttpRequestUtils;
+import org.apereo.cas.web.cookie.CookieSameSitePolicy;
 import org.apereo.cas.web.support.InvalidCookieException;
-
 import com.google.common.base.Splitter;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
+import org.apereo.inspektr.common.web.ClientInfo;
 import org.apereo.inspektr.common.web.ClientInfoHolder;
-
-import javax.servlet.http.HttpServletRequest;
+import org.springframework.beans.factory.ObjectProvider;
+import jakarta.servlet.http.HttpServletRequest;
+import java.io.Serial;
 import java.io.Serializable;
+import java.util.Objects;
 import java.util.stream.Stream;
 
 /**
  * The {@link DefaultCasCookieValueManager} is responsible for creating
  * the CAS SSO cookie and encrypting and signing its value.
- *
+ * <p>
  * This class by default ({@code CookieProperties.isPinToSession=true}) ensures the cookie is used on a
  * request from same IP and with the same user-agent as when cookie was created.
  * The client info (with original client ip) may be null if cluster failover occurs and session replication not working.
@@ -29,14 +34,22 @@ import java.util.stream.Stream;
 @Slf4j
 public class DefaultCasCookieValueManager extends EncryptedCookieValueManager {
     private static final char COOKIE_FIELD_SEPARATOR = '@';
+
     private static final int COOKIE_FIELDS_LENGTH = 3;
+
+    @Serial
     private static final long serialVersionUID = -2696352696382374584L;
 
     private final PinnableCookieProperties cookieProperties;
 
+    private final ObjectProvider<GeoLocationService> geoLocationService;
+
     public DefaultCasCookieValueManager(final CipherExecutor<Serializable, Serializable> cipherExecutor,
+                                        final ObjectProvider<GeoLocationService> geoLocationService,
+                                        final CookieSameSitePolicy cookieSameSitePolicy,
                                         final PinnableCookieProperties cookieProperties) {
-        super(cipherExecutor);
+        super(cipherExecutor, cookieSameSitePolicy);
+        this.geoLocationService = geoLocationService;
         this.cookieProperties = cookieProperties;
     }
 
@@ -46,8 +59,12 @@ public class DefaultCasCookieValueManager extends EncryptedCookieValueManager {
 
         if (cookieProperties.isPinToSession()) {
             val clientInfo = ClientInfoHolder.getClientInfo();
-            builder.append(COOKIE_FIELD_SEPARATOR).append(clientInfo.getClientIpAddress());
-
+            if (clientInfo != null) {
+                val clientLocation = cookieProperties.isGeoLocateClientSession()
+                    ? getClientGeoLocation(clientInfo)
+                    : clientInfo.getClientIpAddress();
+                builder.append(COOKIE_FIELD_SEPARATOR).append(clientLocation);
+            }
             val userAgent = HttpRequestUtils.getHttpServletRequestUserAgent(request);
             if (StringUtils.isBlank(userAgent)) {
                 throw new IllegalStateException("Request does not specify a user-agent");
@@ -60,40 +77,75 @@ public class DefaultCasCookieValueManager extends EncryptedCookieValueManager {
         return builder.toString();
     }
 
+    private String getClientGeoLocation(final ClientInfo clientInfo) {
+        return geoLocationService
+            .stream()
+            .map(service -> {
+                val geoLocation = service.locate(clientInfo.getClientIpAddress());
+                if (geoLocation != null && geoLocation.getAddresses() != null && !geoLocation.getAddresses().isEmpty()) {
+                    return org.springframework.util.StringUtils.collectionToCommaDelimitedString(geoLocation.getAddresses());
+                }
+                return clientInfo.getClientIpAddress();
+            })
+            .filter(Objects::nonNull)
+            .findFirst()
+            .orElseGet(clientInfo::getClientIpAddress);
+    }
+
     @Override
-    protected String obtainValueFromCompoundCookie(final String cookieValue, final HttpServletRequest request) {
-        val cookieParts = Splitter.on(String.valueOf(COOKIE_FIELD_SEPARATOR)).splitToList(cookieValue);
-        val value = cookieParts.get(0);
+    protected String obtainValueFromCompoundCookie(final String value, final HttpServletRequest request) {
+        val cookieParts = Splitter.on(String.valueOf(COOKIE_FIELD_SEPARATOR)).splitToList(value);
+
+        val cookieValue = cookieParts.getFirst();
         if (!cookieProperties.isPinToSession()) {
             LOGGER.trace("Cookie session-pinning is disabled. Returning cookie value as it was provided");
-            return value;
+            return cookieValue;
         }
 
         if (cookieParts.size() != COOKIE_FIELDS_LENGTH) {
             throw new InvalidCookieException("Invalid cookie. Required fields are missing");
         }
-        val remoteAddr = cookieParts.get(1);
-        val userAgent = cookieParts.get(2);
+        val cookieClientLocationOrIp = cookieParts.get(1);
+        val cookieUserAgent = cookieParts.get(2);
 
-        if (Stream.of(value, remoteAddr, userAgent).anyMatch(StringUtils::isBlank)) {
+        if (Stream.of(cookieValue, cookieClientLocationOrIp, cookieUserAgent).anyMatch(StringUtils::isBlank)) {
             throw new InvalidCookieException("Invalid cookie. Required fields are empty");
         }
 
         val clientInfo = ClientInfoHolder.getClientInfo();
         if (clientInfo == null) {
-            throw new InvalidCookieException("Unable to match required remote address "
-                    + remoteAddr + " because client ip at time of cookie creation is unknown");
+            val message = "Unable to match required remote address %s because client ip at time of cookie creation is unknown".formatted(cookieClientLocationOrIp);
+            LOGGER.warn(message);
+            throw new InvalidCookieException(message);
         }
 
-        if (!remoteAddr.equals(clientInfo.getClientIpAddress())) {
-            throw new InvalidCookieException("Invalid cookie. Required remote address "
-                    + remoteAddr + " does not match " + clientInfo.getClientIpAddress());
+        if (cookieProperties.isGeoLocateClientSession()) {
+            val clientLocationOrIp = getClientGeoLocation(clientInfo);
+            if (!cookieClientLocationOrIp.equals(clientLocationOrIp)) {
+                val message = "Invalid cookie. Required remote address %s does not match %s".formatted(cookieClientLocationOrIp, clientLocationOrIp);
+                LOGGER.warn(message);
+                throw new InvalidCookieException(message);
+            }
+        } else {
+            val clientIpAddress = clientInfo.getClientIpAddress();
+            if (!cookieClientLocationOrIp.equals(clientIpAddress)) {
+                if (StringUtils.isBlank(cookieProperties.getAllowedIpAddressesPattern())
+                    || !RegexUtils.find(cookieProperties.getAllowedIpAddressesPattern(), clientIpAddress)) {
+                    val message = "Invalid cookie. Required remote address %s does not match %s".formatted(cookieClientLocationOrIp, clientIpAddress);
+                    LOGGER.warn(message);
+                    throw new InvalidCookieException(message);
+                }
+                LOGGER.debug("Required remote address [{}] does not match [{}], but it's authorized to proceed",
+                    cookieClientLocationOrIp, clientIpAddress);
+            }
         }
 
         val agent = HttpRequestUtils.getHttpServletRequestUserAgent(request);
-        if (!userAgent.equals(agent)) {
-            throw new InvalidCookieException("Invalid cookie. Required user-agent " + userAgent + " does not match " + agent);
+        if (!cookieUserAgent.equals(agent)) {
+            val message = "Invalid cookie. Required user-agent %s does not match %s".formatted(cookieUserAgent, agent);
+            LOGGER.warn(message);
+            throw new InvalidCookieException(message);
         }
-        return value;
+        return cookieValue;
     }
 }
