@@ -11,8 +11,7 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
-import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -21,7 +20,7 @@ import static org.junit.jupiter.api.Assertions.*;
  * @since 3.0.0
  */
 @Tag("Authentication")
-public class HttpBasedServiceCredentialTests {
+class HttpBasedServiceCredentialTests {
 
     private static final File JSON_FILE = new File(FileUtils.getTempDirectoryPath(), "httpBasedServiceCredential.json");
 
@@ -29,31 +28,31 @@ public class HttpBasedServiceCredentialTests {
         .defaultTypingEnabled(true).build().toObjectMapper();
 
     @Test
-    public void verifyProperUrl() {
+    void verifyProperUrl() throws Throwable {
         assertEquals(CoreAuthenticationTestUtils.CONST_GOOD_URL,
             CoreAuthenticationTestUtils.getHttpBasedServiceCredentials().getCallbackUrl().toExternalForm());
     }
 
     @Test
-    public void verifyEqualsWithNull() throws Exception {
+    void verifyEqualsWithNull() throws Throwable {
         val registeredService = CoreAuthenticationTestUtils.getRegisteredService(CoreAuthenticationTestUtils.CONST_TEST_URL);
-        val c = new HttpBasedServiceCredential(new URL(CoreAuthenticationTestUtils.CONST_GOOD_URL), registeredService);
-        assertNotEquals(c, null);
+        val c = new HttpBasedServiceCredential(new URI(CoreAuthenticationTestUtils.CONST_GOOD_URL).toURL(), registeredService);
+        assertNotEquals(null, c);
     }
 
     @Test
-    public void verifyEqualsWithFalse() throws Exception {
+    void verifyEqualsWithFalse() throws Throwable {
         val registeredService = CoreAuthenticationTestUtils.getRegisteredService(CoreAuthenticationTestUtils.CONST_TEST_URL);
-        val c = new HttpBasedServiceCredential(new URL(CoreAuthenticationTestUtils.CONST_GOOD_URL), registeredService);
-        val c2 = new HttpBasedServiceCredential(new URL("http://www.msn.com"), registeredService);
+        val c = new HttpBasedServiceCredential(new URI(CoreAuthenticationTestUtils.CONST_GOOD_URL).toURL(), registeredService);
+        val c2 = new HttpBasedServiceCredential(new URI("http://www.msn.com").toURL(), registeredService);
         assertNotEquals(c2, c);
         assertNotEquals(new Object(), c);
     }
 
     @Test
-    public void verifyEqualsWithTrue() throws Exception {
+    void verifyEqualsWithTrue() throws Throwable {
         val registeredService = RegisteredServiceTestUtils.getRegisteredService(CoreAuthenticationTestUtils.CONST_TEST_URL);
-        val callbackUrl = new URL(CoreAuthenticationTestUtils.CONST_GOOD_URL);
+        val callbackUrl = new URI(CoreAuthenticationTestUtils.CONST_GOOD_URL).toURL();
         val c = new HttpBasedServiceCredential(callbackUrl, registeredService);
         val c2 = new HttpBasedServiceCredential(callbackUrl, registeredService);
 
@@ -62,11 +61,10 @@ public class HttpBasedServiceCredentialTests {
     }
 
     @Test
-    public void verifySerializeAnHttpBasedServiceCredentialToJson() throws IOException {
+    void verifySerializeAnHttpBasedServiceCredentialToJson() throws Throwable {
         val credentialMetaDataWritten =
-            new HttpBasedServiceCredential(new URL(CoreAuthenticationTestUtils.CONST_GOOD_URL),
+            new HttpBasedServiceCredential(new URI(CoreAuthenticationTestUtils.CONST_GOOD_URL).toURL(),
                 RegisteredServiceTestUtils.getRegisteredService(CoreAuthenticationTestUtils.CONST_TEST_URL));
-
         MAPPER.writeValue(JSON_FILE, credentialMetaDataWritten);
         val credentialMetaDataRead = MAPPER.readValue(JSON_FILE, HttpBasedServiceCredential.class);
         assertEquals(credentialMetaDataWritten, credentialMetaDataRead);
