@@ -1,15 +1,15 @@
 package org.apereo.cas.services;
 
+import org.apereo.cas.util.RandomUtils;
 import org.apereo.cas.util.serialization.JacksonObjectMapperFactory;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.val;
-import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.io.File;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Files;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -18,24 +18,44 @@ import static org.junit.jupiter.api.Assertions.*;
  * @since 4.0.0
  */
 @Tag("RegisteredService")
-public class RegexMatchingRegisteredServiceProxyPolicyTests {
-
-    private static final File JSON_FILE = new File(FileUtils.getTempDirectoryPath(), "regexMatchingRegisteredServiceProxyPolicy.json");
-
+class RegexMatchingRegisteredServiceProxyPolicyTests {
     private static final ObjectMapper MAPPER = JacksonObjectMapperFactory.builder()
         .defaultTypingEnabled(true).build().toObjectMapper();
 
     @Test
-    public void verifySerializeARegexMatchingRegisteredServiceProxyPolicyToJson() throws Exception {
-        val policyWritten = new RegexMatchingRegisteredServiceProxyPolicy("pattern");
-        MAPPER.writeValue(JSON_FILE, policyWritten);
-        val policyRead = MAPPER.readValue(JSON_FILE, RegexMatchingRegisteredServiceProxyPolicy.class);
-        assertEquals(policyWritten, policyRead);
+    void verifySerializeARegexMatchingRegisteredServiceProxyPolicyToJson() throws Throwable {
+        val jsonFile = Files.createTempFile(RandomUtils.randomAlphabetic(8), ".json").toFile();
+        val policy = new RegexMatchingRegisteredServiceProxyPolicy();
+        policy.setPattern("pattern");
+        policy.setExactMatch(true);
+        policy.setUseServiceId(true);
+        MAPPER.writeValue(jsonFile, policy);
+        val policyRead = MAPPER.readValue(jsonFile, RegexMatchingRegisteredServiceProxyPolicy.class);
+        assertEquals(policy, policyRead);
     }
 
     @Test
-    public void verifyBadPattern() throws Exception {
-        val policy = new RegexMatchingRegisteredServiceProxyPolicy("***");
-        assertFalse(policy.isAllowedProxyCallbackUrl(new URL("https://github.com/apereo/cas")));
+    void verifyBadPattern() throws Throwable {
+        val policy = new RegexMatchingRegisteredServiceProxyPolicy();
+        policy.setPattern("***");
+        assertFalse(policy.isAllowedProxyCallbackUrl(RegisteredServiceTestUtils.getRegisteredService(),
+            new URI("https://github.com/apereo/cas").toURL()));
+    }
+
+    @Test
+    void verifyExactMatch() throws Throwable {
+        val policy = new RegexMatchingRegisteredServiceProxyPolicy();
+        policy.setPattern("https://github.com/apereo/cas");
+        policy.setExactMatch(true);
+        assertTrue(policy.isAllowedProxyCallbackUrl(RegisteredServiceTestUtils.getRegisteredService(),
+            new URI("https://github.com/apereo/cas").toURL()));
+    }
+
+    @Test
+    void verifyServiceIdPattern() throws Throwable {
+        val policy = new RegexMatchingRegisteredServiceProxyPolicy();
+        policy.setUseServiceId(true);
+        val registeredService = RegisteredServiceTestUtils.getRegisteredService("^https:.+/apereo/cas");
+        assertTrue(policy.isAllowedProxyCallbackUrl(registeredService, new URI("https://github.com/apereo/cas").toURL()));
     }
 }
