@@ -1,12 +1,15 @@
 package org.apereo.cas.util;
 
-import lombok.SneakyThrows;
+import org.apereo.cas.util.function.FunctionUtils;
+
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
+import org.jooq.lambda.Unchecked;
 
 import java.net.InetAddress;
-import java.net.URL;
+import java.net.URI;
+import java.util.Optional;
 
 /**
  * This is {@link InetAddressUtils}.
@@ -25,13 +28,13 @@ public class InetAddressUtils {
      * @return the by name
      */
     public static InetAddress getByName(final String urlAddr) {
-        try {
-            val url = new URL(urlAddr);
-            return InetAddress.getByName(url.getHost());
-        } catch (final Exception e) {
+        return FunctionUtils.doAndHandle(() -> {
+            val url = new URI(urlAddr).toURL();
+            return InetAddress.getAllByName(url.getHost())[0];
+        }, e -> {
             LOGGER.trace("Host name could not be determined automatically.", e);
-        }
-        return null;
+            return null;
+        }).get();
     }
 
 
@@ -40,14 +43,15 @@ public class InetAddressUtils {
      *
      * @return the cas server host name
      */
-    @SneakyThrows
     public static String getCasServerHostName() {
-        val hostName = InetAddress.getLocalHost().getHostName();
-        val index = hostName.indexOf('.');
-        if (index > 0) {
-            return hostName.substring(0, index);
-        }
-        return hostName;
+        return FunctionUtils.doAndHandle(() -> {
+            val hostName = InetAddress.getLocalHost().getHostName();
+            val index = hostName.indexOf('.');
+            if (index > 0) {
+                return hostName.substring(0, index);
+            }
+            return hostName;
+        }, throwable -> "unknown").get();
     }
 
     /**
@@ -56,12 +60,10 @@ public class InetAddressUtils {
      * @param name the name
      * @return the cas server host address
      */
-    @SneakyThrows
     public static String getCasServerHostAddress(final String name) {
-        val host = getByName(name);
-        if (host != null) {
-            return host.getHostAddress();
-        }
-        return null;
+        return Unchecked.supplier(() -> {
+            val host = getByName(name);
+            return Optional.ofNullable(host).map(InetAddress::getHostAddress).orElse(null);
+        }).get();
     }
 }
