@@ -9,9 +9,9 @@ import org.apereo.cas.support.events.service.CasRegisteredServiceSavedEvent;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.serialization.StringSerializer;
 
-import com.fasterxml.jackson.core.util.MinimalPrettyPrinter;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
+import org.apereo.inspektr.common.web.ClientInfoHolder;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.http.MediaType;
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -26,6 +26,7 @@ import software.amazon.awssdk.services.s3.model.ListObjectsV2Request;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import java.util.Collection;
+import java.util.Locale;
 import java.util.Map;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -52,7 +53,7 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
         final S3Client s3Client) {
         super(applicationContext, serviceRegistryListeners);
         this.s3Client = s3Client;
-        this.registeredServiceSerializer = new RegisteredServiceJsonSerializer(new MinimalPrettyPrinter());
+        this.registeredServiceSerializer = new RegisteredServiceJsonSerializer(applicationContext);
     }
 
     @Override
@@ -78,9 +79,10 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
                     "description", rs.getDescription()))
                 .build();
             val body = this.registeredServiceSerializer.toString(rs);
+            val clientInfo = ClientInfoHolder.getClientInfo();
             s3Client.putObject(request, RequestBody.fromString(body));
             LOGGER.trace("Saved registered service [{}]", rs);
-            publishEvent(new CasRegisteredServiceSavedEvent(this, rs));
+            publishEvent(new CasRegisteredServiceSavedEvent(this, rs, clientInfo));
         } catch (final Exception e) {
             LoggingUtils.error(LOGGER, e);
         }
@@ -119,9 +121,10 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
                     .key(object.key())
                     .build()));
                 val bucketName = determineBucketName(registeredService);
+                val clientInfo = ClientInfoHolder.getClientInfo();
                 s3Client.deleteBucket(DeleteBucketRequest.builder().bucket(bucketName).build());
                 LOGGER.trace("Deleted registered service [{}]", registeredService);
-                publishEvent(new CasRegisteredServiceDeletedEvent(this, registeredService));
+                publishEvent(new CasRegisteredServiceDeletedEvent(this, registeredService, clientInfo));
                 return true;
             }
         } catch (final Exception e) {
@@ -164,7 +167,7 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
         val result = s3Client.listObjectsV2(ListObjectsV2Request.builder().bucket(bucket.name()).build());
         val objects = result.contents();
         LOGGER.debug("Located [{}] S3 object(s) from bucket [{}]", objects.size(), bucket.name());
-        val objectKey = objects.get(0).key();
+        val objectKey = objects.getFirst().key();
         LOGGER.debug("Fetching object [{}] from bucket [{}]", objectKey, bucket.name());
         val object = s3Client.getObject(GetObjectRequest.builder().bucket(bucket.name()).key(objectKey).build());
         return registeredServiceSerializer.from(object);
@@ -179,6 +182,6 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
     }
 
     private static String determineBucketName(final RegisteredService registeredService) {
-        return (BUCKET_NAME_PREFIX + '-' + registeredService.getName() + '-' + registeredService.getId()).toLowerCase();
+        return (BUCKET_NAME_PREFIX + '-' + registeredService.getName() + '-' + registeredService.getId()).toLowerCase(Locale.ENGLISH);
     }
 }
