@@ -1,14 +1,19 @@
 package org.apereo.cas.ticket.registry;
 
+import org.apereo.cas.authentication.principal.Service;
 import org.apereo.cas.configuration.model.support.dynamodb.DynamoDbTicketRegistryProperties;
+import org.apereo.cas.dynamodb.DynamoDbQueryBuilder;
 import org.apereo.cas.dynamodb.DynamoDbTableUtils;
 import org.apereo.cas.ticket.Ticket;
 import org.apereo.cas.ticket.TicketCatalog;
+import org.apereo.cas.ticket.expiration.NeverExpiresExpirationPolicy;
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.LoggingUtils;
-
+import com.google.common.collect.Streams;
+import lombok.Builder;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.SuperBuilder;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.SerializationUtils;
@@ -17,25 +22,30 @@ import software.amazon.awssdk.core.SdkBytes;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.dynamodb.model.AttributeDefinition;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
-import software.amazon.awssdk.services.dynamodb.model.CreateTableRequest;
+import software.amazon.awssdk.services.dynamodb.model.BatchWriteItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.ComparisonOperator;
 import software.amazon.awssdk.services.dynamodb.model.DeleteItemRequest;
-import software.amazon.awssdk.services.dynamodb.model.DeleteTableRequest;
-import software.amazon.awssdk.services.dynamodb.model.DescribeTableRequest;
 import software.amazon.awssdk.services.dynamodb.model.GetItemRequest;
 import software.amazon.awssdk.services.dynamodb.model.KeySchemaElement;
 import software.amazon.awssdk.services.dynamodb.model.KeyType;
-import software.amazon.awssdk.services.dynamodb.model.ProvisionedThroughput;
 import software.amazon.awssdk.services.dynamodb.model.PutItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.PutRequest;
 import software.amazon.awssdk.services.dynamodb.model.ScalarAttributeType;
 import software.amazon.awssdk.services.dynamodb.model.ScanRequest;
-
+import software.amazon.awssdk.services.dynamodb.model.WriteRequest;
 import java.nio.ByteBuffer;
+import java.time.chrono.ChronoZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * This is {@link DynamoDbTicketRegistryFacilitator}.
@@ -47,11 +57,24 @@ import java.util.stream.Collectors;
 @Getter
 @RequiredArgsConstructor
 public class DynamoDbTicketRegistryFacilitator {
+    private static final int BATCH_PUT_REQUEST_LIMIT = 25;
+
     private final TicketCatalog ticketCatalog;
 
     private final DynamoDbTicketRegistryProperties dynamoDbProperties;
 
     private final DynamoDbClient amazonDynamoDBClient;
+
+    private static Ticket deserializeTicket(final Map<String, AttributeValue> returnItem) {
+        val encoded = returnItem.get(ColumnNames.ENCODED.getColumnName()).b();
+        LOGGER.debug("Located binary encoding of ticket item [{}]. Transforming item into ticket object", returnItem);
+        try (val is = encoded.asInputStream()) {
+            return SerializationUtils.deserialize(is);
+        } catch (final Exception e) {
+            LoggingUtils.error(LOGGER, e);
+        }
+        return null;
+    }
 
     /**
      * Delete.
@@ -91,20 +114,66 @@ public class DynamoDbTicketRegistryFacilitator {
     }
 
     /**
+     * Scan and paginate.
+     *
+     * @return the stream
+     */
+    public Stream<Ticket> stream() {
+        val metadata = ticketCatalog.findAll();
+        val resultStreams = metadata
+            .stream()
+            .map(defn -> {
+                val keys = List.<DynamoDbQueryBuilder>of(
+                    DynamoDbQueryBuilder.builder()
+                        .key(ColumnNames.PREFIX.getColumnName())
+                        .attributeValue(List.of(AttributeValue.builder().s(defn.getPrefix()).build()))
+                        .operator(ComparisonOperator.EQ)
+                        .build());
+                return DynamoDbTableUtils.scanPaginator(amazonDynamoDBClient, defn.getProperties().getStorageName(),
+                    keys, DynamoDbTicketRegistryFacilitator::deserializeTicket);
+            })
+            .toList();
+        return Streams.concat(resultStreams.toArray(new Stream[]{}));
+    }
+
+    /**
+     * Query the storage name.
+     *
+     * @param criteria the criteria
+     * @return the stream
+     */
+    public Stream<Ticket> query(final TicketRegistryQueryCriteria criteria) {
+        val definition = ticketCatalog.find(criteria.getType());
+        val keys = List.<DynamoDbQueryBuilder>of(
+            DynamoDbQueryBuilder.builder()
+                .key(ColumnNames.PREFIX.getColumnName())
+                .attributeValue(List.of(AttributeValue.builder().s(definition.getPrefix()).build()))
+                .operator(ComparisonOperator.EQ)
+                .build());
+        return DynamoDbTableUtils.scanPaginator(amazonDynamoDBClient,
+            definition.getProperties().getStorageName(), criteria.getCount(),
+            keys, DynamoDbTicketRegistryFacilitator::deserializeTicket);
+    }
+
+    /**
      * Gets all.
      *
      * @return the all
      */
     public Collection<Ticket> getAll() {
-        val metadata = this.ticketCatalog.findAll();
+        val metadata = ticketCatalog.findAll();
         val tickets = new ArrayList<Ticket>(metadata.size());
         metadata.forEach(r -> {
             val scan = ScanRequest.builder().tableName(r.getProperties().getStorageName()).build();
             LOGGER.debug("Scanning table with request [{}]", scan);
             val result = this.amazonDynamoDBClient.scan(scan);
             LOGGER.debug("Scanned table with result [{}]", scan);
-            tickets.addAll(result.items().stream()
-                .map(DynamoDbTicketRegistryFacilitator::deserializeTicket).collect(Collectors.toList()));
+            tickets.addAll(result.items()
+                .stream()
+                .map(DynamoDbTicketRegistryFacilitator::deserializeTicket)
+                .filter(Objects::nonNull)
+                .filter(ticket -> !ticket.isExpired())
+                .toList());
         });
         return tickets;
     }
@@ -140,20 +209,93 @@ public class DynamoDbTicketRegistryFacilitator {
     }
 
     /**
+     * Put.
+     *
+     * @param toSave the to save
+     */
+    public void put(final Stream<TicketPayload> toSave) {
+        val queue = new HashMap<String, Collection<WriteRequest>>();
+        val count = new AtomicLong(0);
+        toSave.forEach(entry -> {
+            val metadata = ticketCatalog.find(entry.getOriginalTicket());
+            val entries = queue.getOrDefault(metadata.getProperties().getStorageName(), new ArrayList<>());
+            entries.add(WriteRequest.builder().putRequest(buildPutRequest(entry)).build());
+            count.getAndIncrement();
+
+            queue.put(metadata.getProperties().getStorageName(), entries);
+            if (count.get() >= BATCH_PUT_REQUEST_LIMIT) {
+                val batchRequest = BatchWriteItemRequest.builder().requestItems(queue).build();
+                amazonDynamoDBClient.batchWriteItem(batchRequest);
+                queue.clear();
+                count.set(0);
+            }
+        });
+        if (!queue.isEmpty()) {
+            val batchRequest = BatchWriteItemRequest.builder().requestItems(queue).build();
+            amazonDynamoDBClient.batchWriteItem(batchRequest);
+        }
+    }
+
+    /**
      * Put ticket.
      *
-     * @param ticket        the ticket
-     * @param encodedTicket the encoded ticket
+     * @param payload the payload
      */
-    public void put(final Ticket ticket, final Ticket encodedTicket) {
-        val metadata = this.ticketCatalog.find(ticket);
-        val values = buildTableAttributeValuesMapFromTicket(ticket, encodedTicket);
-        LOGGER.debug("Adding ticket id [{}] with attribute values [{}]", encodedTicket.getId(), values);
-        val putItemRequest = PutItemRequest.builder().tableName(metadata.getProperties().getStorageName()).item(values).build();
-        LOGGER.debug("Submitting put request [{}] for ticket id [{}]", putItemRequest, encodedTicket.getId());
+    public void put(final TicketPayload payload) {
+        val putItemRequest = buildPutItemRequest(payload);
+        LOGGER.debug("Submitting put request [{}] for ticket id [{}]", putItemRequest, payload.getEncodedTicket().getId());
         val putItemResult = amazonDynamoDBClient.putItem(putItemRequest);
         LOGGER.debug("Ticket added with result [{}]", putItemResult);
-        getAll();
+    }
+
+    /**
+     * Gets sessions with attributes.
+     *
+     * @param filterExpression the filter expression
+     * @param attributeNames   the attribute names
+     * @param attributeValues  the attribute values
+     * @return the sessions with attributes
+     */
+    public Stream<? extends Ticket> getSessionsWithAttributes(final String filterExpression,
+                                                              final Map<String, String> attributeNames,
+                                                              final Map<String, AttributeValue> attributeValues) {
+        return getEntitiesWithAttributes(dynamoDbProperties.getTicketGrantingTicketsTableName(),
+            filterExpression, attributeNames, attributeValues);
+    }
+
+    /**
+     * Gets entities with attributes.
+     *
+     * @param tableName        the table name
+     * @param filterExpression the filter expression
+     * @param attributeNames   the attribute names
+     * @param attributeValues  the attribute values
+     * @return the entities with attributes
+     */
+    public Stream<Ticket> getEntitiesWithAttributes(final String tableName,
+                                                    final String filterExpression,
+                                                    final Map<String, String> attributeNames,
+                                                    final Map<String, AttributeValue> attributeValues) {
+        val scanResponse = DynamoDbTableUtils.scan(amazonDynamoDBClient, tableName,
+            filterExpression, attributeNames, attributeValues);
+        return scanResponse
+            .items()
+            .stream()
+            .map(DynamoDbTicketRegistryFacilitator::deserializeTicket)
+            .filter(Objects::nonNull);
+    }
+
+    private PutRequest buildPutRequest(final TicketPayload payload) {
+        val values = buildTableAttributeValuesMapFromTicket(payload);
+        LOGGER.debug("Adding ticket id [{}] with attribute values [{}]", payload.getEncodedTicket().getId(), values);
+        return PutRequest.builder().item(values).build();
+    }
+
+    private PutItemRequest buildPutItemRequest(final TicketPayload payload) {
+        val metadata = this.ticketCatalog.find(payload.getOriginalTicket());
+        val values = buildTableAttributeValuesMapFromTicket(payload);
+        LOGGER.debug("Adding ticket id [{}] with attribute values [{}]", payload.getEncodedTicket().getId(), values);
+        return PutItemRequest.builder().tableName(metadata.getProperties().getStorageName()).item(values).build();
     }
 
     /**
@@ -163,82 +305,159 @@ public class DynamoDbTicketRegistryFacilitator {
      */
     public void createTicketTables(final boolean deleteTables) {
         val metadata = this.ticketCatalog.findAll();
-        val throughput = ProvisionedThroughput.builder()
-            .readCapacityUnits(dynamoDbProperties.getReadCapacity())
-            .writeCapacityUnits(dynamoDbProperties.getWriteCapacity())
-            .build();
-
         metadata.forEach(Unchecked.consumer(r -> {
-            val request = CreateTableRequest.builder()
-                .attributeDefinitions(AttributeDefinition.builder().attributeName(ColumnNames.ID.getColumnName()).attributeType(ScalarAttributeType.S).build())
-                .keySchema(KeySchemaElement.builder().attributeName(ColumnNames.ID.getColumnName()).keyType(KeyType.HASH).build())
-                .provisionedThroughput(throughput)
-                .tableName(r.getProperties().getStorageName())
-                .build();
-            if (deleteTables) {
-                val delete = DeleteTableRequest.builder().tableName(r.getProperties().getStorageName()).build();
-                LOGGER.debug("Sending delete request [{}] to remove table if necessary", delete);
-                DynamoDbTableUtils.deleteTableIfExists(amazonDynamoDBClient, delete);
-            }
-            LOGGER.debug("Sending create request [{}] to create table", request);
-            DynamoDbTableUtils.createTableIfNotExists(amazonDynamoDBClient, request);
-            LOGGER.debug("Waiting until table [{}] becomes active...", request.tableName());
-            DynamoDbTableUtils.waitUntilActive(amazonDynamoDBClient, request.tableName());
-            val describeTableRequest = DescribeTableRequest.builder().tableName(request.tableName()).build();
-            LOGGER.debug("Sending request [{}] to obtain table description...", describeTableRequest);
-            val tableDescription = amazonDynamoDBClient.describeTable(describeTableRequest).table();
-            LOGGER.debug("Located newly created table with description: [{}]", tableDescription);
+            val attributeDefns = List.of(
+                AttributeDefinition.builder()
+                    .attributeName(ColumnNames.ID.getColumnName())
+                    .attributeType(ScalarAttributeType.S)
+                    .build());
+            val keySchemaElements = List.of(KeySchemaElement.builder()
+                .attributeName(ColumnNames.ID.getColumnName())
+                .keyType(KeyType.HASH)
+                .build());
+            val tableDesc = DynamoDbTableUtils.createTable(amazonDynamoDBClient, dynamoDbProperties,
+                r.getProperties().getStorageName(),
+                deleteTables,
+                attributeDefns,
+                keySchemaElements);
+            DynamoDbTableUtils.enableTimeToLiveOnTable(amazonDynamoDBClient,
+                tableDesc.tableName(), ColumnNames.EXPIRATION.getColumnName());
         }));
     }
 
     /**
      * Build table attribute values from ticket map.
      *
-     * @param ticket    the ticket
-     * @param encTicket the encoded ticket
+     * @param payload the payload
      * @return the map
      */
-    public Map<String, AttributeValue> buildTableAttributeValuesMapFromTicket(final Ticket ticket, final Ticket encTicket) {
+    public Map<String, AttributeValue> buildTableAttributeValuesMapFromTicket(
+        final TicketPayload payload) {
         val values = new HashMap<String, AttributeValue>();
+        val ttl = Optional.ofNullable(payload.getOriginalTicket().getExpirationPolicy().toMaximumExpirationTime(payload.getOriginalTicket()))
+            .or(() -> Optional.ofNullable(NeverExpiresExpirationPolicy.INSTANCE.toMaximumExpirationTime(payload.getEncodedTicket())))
+            .map(ChronoZonedDateTime::toEpochSecond)
+            .orElse(-1L);
+
+        values.put(ColumnNames.ATTRIBUTES.getColumnName(),
+            AttributeValue.builder().m(convertAttributes(payload)).build());
+        values.put(ColumnNames.EXPIRATION.getColumnName(),
+            AttributeValue.builder().n(String.valueOf(ttl)).build());
         values.put(ColumnNames.ID.getColumnName(),
-            AttributeValue.builder().s(encTicket.getId()).build());
+            AttributeValue.builder().s(payload.getEncodedTicket().getId()).build());
+        values.put(ColumnNames.PRINCIPAL.getColumnName(),
+            AttributeValue.builder().s(payload.getPrincipal()).build());
+        values.put(ColumnNames.SERVICE.getColumnName(),
+            AttributeValue.builder().s(payload.getService()).build());
         values.put(ColumnNames.PREFIX.getColumnName(),
-            AttributeValue.builder().s(ticket.getPrefix()).build());
+            AttributeValue.builder().s(payload.getOriginalTicket().getPrefix()).build());
         values.put(ColumnNames.CREATION_TIME.getColumnName(), AttributeValue.builder().
-            s(ticket.getCreationTime().toString()).build());
+            s(payload.getOriginalTicket().getCreationTime().toString()).build());
         values.put(ColumnNames.COUNT_OF_USES.getColumnName(),
-            AttributeValue.builder().n(Integer.toString(ticket.getCountOfUses())).build());
+            AttributeValue.builder().n(Integer.toString(payload.getOriginalTicket().getCountOfUses())).build());
         values.put(ColumnNames.TIME_TO_LIVE.getColumnName(),
-            AttributeValue.builder().n(Long.toString(ticket.getExpirationPolicy().getTimeToLive())).build());
+            AttributeValue.builder().n(Long.toString(payload.getOriginalTicket().getExpirationPolicy().getTimeToLive())).build());
         values.put(ColumnNames.TIME_TO_IDLE.getColumnName(),
-            AttributeValue.builder().n(Long.toString(ticket.getExpirationPolicy().getTimeToIdle())).build());
+            AttributeValue.builder().n(Long.toString(payload.getOriginalTicket().getExpirationPolicy().getTimeToIdle())).build());
         values.put(ColumnNames.ENCODED.getColumnName(),
-            AttributeValue.builder().b(SdkBytes.fromByteBuffer(ByteBuffer.wrap(SerializationUtils.serialize(encTicket)))).build());
-        LOGGER.debug("Created attribute values [{}] based on provided ticket [{}]", values, encTicket.getId());
+            AttributeValue.builder().b(SdkBytes.fromByteBuffer(ByteBuffer.wrap(SerializationUtils.serialize(payload.getEncodedTicket())))).build());
+        LOGGER.debug("Created attribute values [{}] based on provided ticket [{}]", values, payload.getEncodedTicket().getId());
         return values;
     }
 
-    private static Ticket deserializeTicket(final Map<String, AttributeValue> returnItem) {
-        val bb = returnItem.get(ColumnNames.ENCODED.getColumnName()).b();
-        LOGGER.debug("Located binary encoding of ticket item [{}]. Transforming item into ticket object", returnItem);
-        try (val is = bb.asInputStream()) {
-            return SerializationUtils.deserialize(is);
-        } catch (final Exception e) {
-            LoggingUtils.error(LOGGER, e);
-        }
-        return null;
+    private static Map<String, AttributeValue> convertAttributes(final TicketPayload payload) {
+        val attributes = new HashMap<String, AttributeValue>();
+        payload.getAttributes().forEach((key, values) -> {
+            val attributeValues = AttributeValue.builder()
+                .ss(values.stream().map(Object::toString).collect(Collectors.toList()))
+                .build();
+            attributes.put(key, attributeValues);
+        });
+        return attributes;
     }
+
+    /**
+     * Gets sessions for.
+     *
+     * @param principal the principal
+     * @return the sessions for
+     */
+    public Stream<? extends Ticket> getSessionsFor(final String principal) {
+        val keys = List.<DynamoDbQueryBuilder>of(
+            DynamoDbQueryBuilder.builder()
+                .key(ColumnNames.PRINCIPAL.getColumnName())
+                .attributeValue(List.of(AttributeValue.builder().s(principal).build()))
+                .operator(ComparisonOperator.EQ)
+                .build());
+        return DynamoDbTableUtils.getRecordsByKeys(amazonDynamoDBClient,
+                dynamoDbProperties.getTicketGrantingTicketsTableName(),
+                keys, DynamoDbTicketRegistryFacilitator::deserializeTicket)
+            .filter(ticket -> !ticket.isExpired());
+    }
+
+    /**
+     * Count tickets for.
+     *
+     * @param tableName the table name
+     * @param service   the service
+     * @return the long
+     */
+    public long countTicketsFor(final String tableName, final Service service) {
+        val keys = List.<DynamoDbQueryBuilder>of(
+            DynamoDbQueryBuilder.builder()
+                .key(ColumnNames.SERVICE.getColumnName())
+                .attributeValue(List.of(AttributeValue.builder().s(service.getId()).build()))
+                .operator(ComparisonOperator.EQ)
+                .build());
+        return DynamoDbTableUtils.getRecordsByKeys(amazonDynamoDBClient,
+                tableName, keys, DynamoDbTicketRegistryFacilitator::deserializeTicket)
+            .filter(ticket -> !ticket.isExpired())
+            .count();
+    }
+
+    /**
+     * Count tickets and return value.
+     *
+     * @param ticketType the ticket type
+     * @param prefix     the prefix
+     * @return the long
+     */
+    public long countTickets(final Class<? extends Ticket> ticketType, final String prefix) {
+        val keys = List.<DynamoDbQueryBuilder>of(
+            DynamoDbQueryBuilder.builder()
+                .key(ColumnNames.PREFIX.getColumnName())
+                .attributeValue(List.of(AttributeValue.builder().s(prefix).build()))
+                .operator(ComparisonOperator.EQ)
+                .build());
+        return ticketCatalog.findTicketDefinition(ticketType)
+            .map(def -> DynamoDbTableUtils.scan(amazonDynamoDBClient, def.getProperties().getStorageName(), keys).count())
+            .orElse(-1);
+    }
+
 
     /**
      * Column names for tables holding tickets.
      */
     @Getter
+    @RequiredArgsConstructor
     public enum ColumnNames {
 
         /**
          * id column.
          */
         ID("id"),
+        /**
+         * principal column.
+         */
+        PRINCIPAL("principal"),
+        /**
+         * service column.
+         */
+        SERVICE("service"),
+        /**
+         * attributes column.
+         */
+        ATTRIBUTES("attributes"),
         /**
          * prefix column.
          */
@@ -260,14 +479,29 @@ public class DynamoDbTicketRegistryFacilitator {
          */
         TIME_TO_IDLE("timeToIdle"),
         /**
+         * expiration column.
+         */
+        EXPIRATION("expiration"),
+        /**
          * encoded column.
          */
         ENCODED("encoded");
 
         private final String columnName;
+    }
 
-        ColumnNames(final String columnName) {
-            this.columnName = columnName;
-        }
+    @SuperBuilder
+    @Getter
+    static class TicketPayload {
+        private final Ticket originalTicket;
+
+        private final Ticket encodedTicket;
+
+        private final String principal;
+
+        private final String service;
+
+        @Builder.Default
+        private final Map<String, List<Object>> attributes = new HashMap<>();
     }
 }
