@@ -11,7 +11,8 @@ import lombok.val;
 import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.function.Executable;
+import org.junit.jupiter.api.parallel.ResourceAccessMode;
+import org.junit.jupiter.api.parallel.ResourceLock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -21,7 +22,7 @@ import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.UUID;
 
@@ -37,8 +38,9 @@ import static org.mockito.Mockito.*;
 @SpringBootTest(classes = BaseGoogleAuthenticatorTests.SharedTestConfiguration.class,
     properties = "cas.authn.mfa.gauth.json.location=file:${java.io.tmpdir}/repository.json")
 @Getter
-@Tag("MFA")
-public class JsonGoogleAuthenticatorTokenCredentialRepositoryTests extends BaseOneTimeTokenCredentialRepositoryTests {
+@Tag("MFAProvider")
+@ResourceLock(value = "registry", mode = ResourceAccessMode.READ_WRITE)
+class JsonGoogleAuthenticatorTokenCredentialRepositoryTests extends BaseOneTimeTokenCredentialRepositoryTests {
 
     @Autowired
     @Qualifier("googleAuthenticatorAccountRegistry")
@@ -49,36 +51,31 @@ public class JsonGoogleAuthenticatorTokenCredentialRepositoryTests extends BaseO
     private IGoogleAuthenticator googleAuthenticatorInstance;
 
     @Test
-    public void verifyFails() throws Exception {
+    void verifyFails() throws Throwable {
         val resource = mock(Resource.class);
         val repo = new JsonGoogleAuthenticatorTokenCredentialRepository(resource,
-            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString());
+            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString(), CipherExecutor.noOpOfNumberToNumber());
         assertTrue(repo.load().isEmpty());
         assertNull(repo.update(OneTimeTokenAccount.builder().build()));
         assertEquals(0, repo.count());
-        assertDoesNotThrow(new Executable() {
-            @Override
-            public void execute() {
-                repo.delete("casuser");
-            }
-        });
+        assertDoesNotThrow(() -> repo.delete("casuser"));
         when(resource.getFile()).thenReturn(File.createTempFile("test", ".json"));
         assertTrue(repo.get("casuser").isEmpty());
     }
 
     @Test
-    public void verifyNotExists() {
+    void verifyNotExists() throws Throwable {
         val repo = new JsonGoogleAuthenticatorTokenCredentialRepository(new ClassPathResource("acct-bad.json"),
-            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString());
+            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString(), CipherExecutor.noOpOfNumberToNumber());
         assertTrue(repo.get("casuser").isEmpty());
     }
 
     @Test
-    public void verifyNoAccounts() throws Exception {
+    void verifyNoAccounts() throws Throwable {
         val file = File.createTempFile("account", ".json");
         FileUtils.writeStringToFile(file, "{}", StandardCharsets.UTF_8);
         val repo = new JsonGoogleAuthenticatorTokenCredentialRepository(new FileSystemResource(file),
-            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString());
+            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString(), CipherExecutor.noOpOfNumberToNumber());
         assertTrue(repo.get("casuser").isEmpty());
         repo.deleteAll();
         assertTrue(repo.load().isEmpty());
@@ -94,9 +91,9 @@ public class JsonGoogleAuthenticatorTokenCredentialRepositoryTests extends BaseO
     }
 
     @Test
-    public void verifyBadResource() throws Exception {
-        val repo = new JsonGoogleAuthenticatorTokenCredentialRepository(new UrlResource(new URL("https://httpbin.org/get")),
-            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString());
+    void verifyBadResource() throws Throwable {
+        val repo = new JsonGoogleAuthenticatorTokenCredentialRepository(new UrlResource(new URI("https://httpbin.org/get")),
+            googleAuthenticatorInstance, CipherExecutor.noOpOfStringToString(), CipherExecutor.noOpOfNumberToNumber());
         assertTrue(repo.get("casuser").isEmpty());
     }
 }
