@@ -2,29 +2,30 @@ package org.apereo.cas.support.saml.web.idp.profile.builders.nameid;
 
 import org.apereo.cas.support.saml.BaseSamlIdPConfigurationTests;
 import org.apereo.cas.support.saml.services.SamlRegisteredService;
-import org.apereo.cas.support.saml.services.idp.metadata.SamlRegisteredServiceServiceProviderMetadataFacade;
+import org.apereo.cas.support.saml.services.idp.metadata.SamlRegisteredServiceMetadataAdaptor;
+import org.apereo.cas.support.saml.web.idp.profile.builders.SamlProfileBuilderContext;
 import org.apereo.cas.support.saml.web.idp.profile.builders.SamlProfileObjectBuilder;
 import org.apereo.cas.util.CollectionUtils;
-
 import lombok.val;
-import org.jasig.cas.client.authentication.AttributePrincipalImpl;
-import org.jasig.cas.client.validation.Assertion;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-import org.opensaml.messaging.context.MessageContext;
+import org.opensaml.saml.common.SAMLObject;
 import org.opensaml.saml.common.xml.SAMLConstants;
+import org.opensaml.saml.saml2.core.AttributeQuery;
 import org.opensaml.saml.saml2.core.AuthnRequest;
 import org.opensaml.saml.saml2.core.Issuer;
 import org.opensaml.saml.saml2.core.NameID;
 import org.opensaml.saml.saml2.core.NameIDPolicy;
+import org.opensaml.saml.saml2.core.NameIDType;
+import org.opensaml.saml.saml2.core.Subject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
-
 import java.util.ArrayList;
-import java.util.Date;
-
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -34,42 +35,49 @@ import static org.mockito.Mockito.*;
  * @author Misagh Moayyed
  * @since 5.3.0
  */
-@Tag("SAML")
-public class SamlProfileSamlNameIdBuilderTests extends BaseSamlIdPConfigurationTests {
+@Tag("SAMLResponse")
+class SamlProfileSamlNameIdBuilderTests extends BaseSamlIdPConfigurationTests {
     @Autowired
     @Qualifier("samlProfileSamlNameIdBuilder")
-    private SamlProfileObjectBuilder<NameID> samlProfileSamlNameIdBuilder;
+    private SamlProfileObjectBuilder<SAMLObject> samlProfileSamlNameIdBuilder;
 
     @Test
-    public void verifyNoSupportedFormats() {
+    void verifyNoSupportedFormats() throws Throwable {
         val authnRequest = mock(AuthnRequest.class);
         val issuer = mock(Issuer.class);
         when(issuer.getValue()).thenReturn("https://idp.example.org");
         when(authnRequest.getIssuer()).thenReturn(issuer);
 
         val policy = mock(NameIDPolicy.class);
-        when(policy.getFormat()).thenReturn(NameID.EMAIL);
+        when(policy.getFormat()).thenReturn(NameIDType.EMAIL);
         when(authnRequest.getNameIDPolicy()).thenReturn(policy);
 
         val service = new SamlRegisteredService();
         service.setServiceId("entity-id");
         service.setNameIdQualifier("https://qualifier.example.org");
         service.setServiceProviderNameIdQualifier("https://sp-qualifier.example.org");
-        service.setRequiredNameIdFormat(NameID.UNSPECIFIED);
-        
-        val facade = mock(SamlRegisteredServiceServiceProviderMetadataFacade.class);
-        when(facade.getEntityId()).thenReturn(service.getServiceId());
-        val assertion = mock(Assertion.class);
-        when(assertion.getPrincipal()).thenReturn(new AttributePrincipalImpl("casuser"));
+        service.setRequiredNameIdFormat(NameIDType.UNSPECIFIED);
 
+        val facade = mock(SamlRegisteredServiceMetadataAdaptor.class);
+        when(facade.getEntityId()).thenReturn(service.getServiceId());
         when(facade.getSupportedNameIdFormats()).thenReturn(new ArrayList<>(0));
-        val result = samlProfileSamlNameIdBuilder.build(authnRequest, new MockHttpServletRequest(), new MockHttpServletResponse(),
-            assertion, service, facade, SAMLConstants.SAML2_POST_BINDING_URI, new MessageContext());
+
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(facade)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+
+        val result = samlProfileSamlNameIdBuilder.build(buildContext);
         assertNotNull(result);
     }
 
     @Test
-    public void verifyUnknownSupportedFormats() {
+    void verifyUnknownSupportedFormats() throws Throwable {
         val authnRequest = mock(AuthnRequest.class);
         val issuer = mock(Issuer.class);
         when(issuer.getValue()).thenReturn("https://idp.example.org");
@@ -84,83 +92,225 @@ public class SamlProfileSamlNameIdBuilderTests extends BaseSamlIdPConfigurationT
         service.setNameIdQualifier("https://qualifier.example.org");
         service.setServiceProviderNameIdQualifier("https://sp-qualifier.example.org");
 
-        val facade = mock(SamlRegisteredServiceServiceProviderMetadataFacade.class);
+        val facade = mock(SamlRegisteredServiceMetadataAdaptor.class);
         when(facade.getEntityId()).thenReturn(service.getServiceId());
-        val assertion = mock(Assertion.class);
-        when(assertion.getPrincipal()).thenThrow(new RuntimeException("undefined"));
-
         when(facade.getSupportedNameIdFormats()).thenReturn(new ArrayList<>(0));
-        val result = samlProfileSamlNameIdBuilder.build(authnRequest, new MockHttpServletRequest(), new MockHttpServletResponse(),
-            assertion, service, facade, SAMLConstants.SAML2_POST_BINDING_URI, new MessageContext());
+
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion(null, Map.of())))
+            .registeredService(service)
+            .adaptor(facade)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+
+        val result = samlProfileSamlNameIdBuilder.build(buildContext);
         assertNull(result);
     }
 
+
     @Test
-    public void verifyNameId() {
-        verifyNameIdByFormat(NameID.EMAIL);
-        verifyNameIdByFormat(NameID.TRANSIENT);
-        verifyNameIdByFormat(NameID.PERSISTENT);
-        verifyNameIdByFormat(NameID.ENTITY);
-        verifyNameIdByFormat(NameID.X509_SUBJECT);
-        verifyNameIdByFormat(NameID.WIN_DOMAIN_QUALIFIED);
-        verifyNameIdByFormat(NameID.KERBEROS);
+    void verifyNameId() throws Throwable {
+        verifyNameIdByFormat(NameIDType.EMAIL);
+        verifyNameIdByFormat(NameIDType.TRANSIENT);
+        verifyNameIdByFormat(NameIDType.PERSISTENT);
+        verifyNameIdByFormat(NameIDType.ENTITY);
+        verifyNameIdByFormat(NameIDType.X509_SUBJECT);
+        verifyNameIdByFormat(NameIDType.WIN_DOMAIN_QUALIFIED);
+        verifyNameIdByFormat(NameIDType.KERBEROS);
+        verifyNameIdByFormat(NameIDType.UNSPECIFIED);
     }
 
     @Test
-    @SuppressWarnings("JavaUtilDate")
-    public void verifyEncryptedNameIdFormat() {
+    void verifyPersistedNameIdFormat() throws Throwable {
         val service = getSamlRegisteredServiceForTestShib();
-        service.setRequiredNameIdFormat(NameID.ENCRYPTED);
+        service.setRequiredNameIdFormat(NameIDType.PERSISTENT);
+
+        val authnRequest = getAuthnRequestFor(service);
+
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(samlRegisteredServiceCachingMetadataResolver,
+            service, service.getServiceId()).orElseThrow();
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
+        assertNotNull(subject.getNameID());
+        assertEquals(NameIDType.PERSISTENT, subject.getNameID().getFormat());
+        assertEquals(adaptor.getEntityId(), subject.getNameID().getSPNameQualifier());
+        assertEquals("https://cas.example.org/idp", subject.getNameID().getNameQualifier());
+    }
+
+    @Test
+    void verifyAttributeQueryNameID() throws Throwable {
+        val service = getSamlRegisteredServiceForTestShib();
+        service.setRequiredNameIdFormat(NameIDType.PERSISTENT);
+
+        val aqNameId = mock(NameID.class);
+        val nameIdValue = UUID.randomUUID().toString();
+        when(aqNameId.getValue()).thenReturn(nameIdValue);
+        when(aqNameId.getFormat()).thenReturn(NameIDType.UNSPECIFIED);
+        val qualifier = UUID.randomUUID().toString();
+        when(aqNameId.getSPNameQualifier()).thenReturn(qualifier);
+        when(aqNameId.getNameQualifier()).thenReturn(qualifier);
+
+        val aqSubject = mock(Subject.class);
+        when(aqSubject.getNameID()).thenReturn(aqNameId);
+        val attributeQuery = mock(AttributeQuery.class);
+        when(attributeQuery.getSubject()).thenReturn(aqSubject);
+
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(samlRegisteredServiceCachingMetadataResolver,
+            service, service.getServiceId()).orElseThrow();
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(attributeQuery)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
+        assertNotNull(subject.getNameID());
+
+        assertEquals(nameIdValue, subject.getNameID().getValue());
+        assertEquals(NameIDType.UNSPECIFIED, subject.getNameID().getFormat());
+        assertEquals(qualifier, subject.getNameID().getSPNameQualifier());
+        assertEquals(qualifier, subject.getNameID().getNameQualifier());
+    }
+
+    @Test
+    void verifyPersistedNameIdFormatWithServiceEntityIdOverride() throws Throwable {
+        val service = getSamlRegisteredServiceForTestShib();
+        service.setRequiredNameIdFormat(NameIDType.PERSISTENT);
+        service.setIssuerEntityId(UUID.randomUUID().toString());
+
+        val authnRequest = getAuthnRequestFor(service);
+
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(samlRegisteredServiceCachingMetadataResolver,
+            service, service.getServiceId()).orElseThrow();
+
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
+        assertNotNull(subject.getNameID());
+        assertEquals(NameIDType.PERSISTENT, subject.getNameID().getFormat());
+        assertEquals(adaptor.getEntityId(), subject.getNameID().getSPNameQualifier());
+        assertEquals(service.getIssuerEntityId(), subject.getNameID().getNameQualifier());
+    }
+
+    @Test
+    void verifyNameIdFormatSkipQualifiers() throws Throwable {
+        val service = getSamlRegisteredServiceForTestShib();
+        service.setRequiredNameIdFormat(NameIDType.PERSISTENT);
+        service.setIssuerEntityId(UUID.randomUUID().toString());
+        service.setSkipGeneratingNameIdQualifier(true);
+        service.setSkipGeneratingServiceProviderNameIdQualifier(true);
+
+        val authnRequest = getAuthnRequestFor(service);
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(samlRegisteredServiceCachingMetadataResolver,
+            service, service.getServiceId()).orElseThrow();
+
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
+        assertNotNull(subject.getNameID());
+        assertEquals(NameIDType.PERSISTENT, subject.getNameID().getFormat());
+        assertNull(subject.getNameID().getSPNameQualifier());
+        assertNull(subject.getNameID().getNameQualifier());
+    }
+
+
+    @Test
+    void verifyEncryptedNameIdFormat() throws Throwable {
+        val service = getSamlRegisteredServiceForTestShib();
+        service.setRequiredNameIdFormat(NameIDType.ENCRYPTED);
         service.setSkipGeneratingSubjectConfirmationNameId(false);
 
         val authnRequest = getAuthnRequestFor(service);
 
-        val adaptor = SamlRegisteredServiceServiceProviderMetadataFacade.get(this.samlRegisteredServiceCachingMetadataResolver,
-            service, service.getServiceId()).get();
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(this.samlRegisteredServiceCachingMetadataResolver,
+            service, service.getServiceId()).orElseThrow();
 
-        val assertion = mock(Assertion.class);
-        when(assertion.getPrincipal()).thenReturn(new AttributePrincipalImpl("casuser"));
-        when(assertion.getValidFromDate()).thenReturn(new Date());
-
-        val subject = samlProfileSamlSubjectBuilder.build(authnRequest, new MockHttpServletRequest(), new MockHttpServletResponse(),
-            assertion, service, adaptor, SAMLConstants.SAML2_POST_BINDING_URI, new MessageContext());
+        val request = new MockHttpServletRequest();
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(request)
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
         assertNull(subject.getNameID());
         assertNotNull(subject.getEncryptedID());
         assertFalse(subject.getSubjectConfirmations().isEmpty());
-        val subjectConfirmation = subject.getSubjectConfirmations().get(0);
+        val subjectConfirmation = subject.getSubjectConfirmations().getFirst();
         assertNotNull(subjectConfirmation.getEncryptedID());
         assertNull(subjectConfirmation.getNameID());
+        assertNotNull(request.getAttribute(NameID.class.getName()));
     }
 
     @Test
-    public void verifySkipTransient() {
+    void verifySkipTransient() throws Throwable {
         val authnRequest = mock(AuthnRequest.class);
         val issuer = mock(Issuer.class);
         when(issuer.getValue()).thenReturn("https://idp.example.org");
         when(authnRequest.getIssuer()).thenReturn(issuer);
 
         val policy = mock(NameIDPolicy.class);
-        when(policy.getFormat()).thenReturn(NameID.TRANSIENT);
+        when(policy.getFormat()).thenReturn(NameIDType.TRANSIENT);
         when(authnRequest.getNameIDPolicy()).thenReturn(policy);
 
         val service = new SamlRegisteredService();
         service.setServiceId("entity-id");
         service.setSkipGeneratingTransientNameId(true);
-        service.setRequiredNameIdFormat(NameID.TRANSIENT);
-        val facade = mock(SamlRegisteredServiceServiceProviderMetadataFacade.class);
+        service.setRequiredNameIdFormat(NameIDType.TRANSIENT);
+        val facade = mock(SamlRegisteredServiceMetadataAdaptor.class);
         when(facade.getEntityId()).thenReturn(service.getServiceId());
-        val assertion = mock(Assertion.class);
-        when(assertion.getPrincipal()).thenReturn(new AttributePrincipalImpl("casuser"));
+        when(facade.getSupportedNameIdFormats()).thenReturn(CollectionUtils.wrapList(NameIDType.TRANSIENT));
 
-        when(facade.getSupportedNameIdFormats()).thenReturn(CollectionUtils.wrapList(NameID.TRANSIENT));
-        val result = samlProfileSamlNameIdBuilder.build(authnRequest, new MockHttpServletRequest(), new MockHttpServletResponse(),
-            assertion, service, facade, SAMLConstants.SAML2_POST_BINDING_URI, new MessageContext());
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(facade)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val result = (NameID) samlProfileSamlNameIdBuilder.build(buildContext);
         assertNotNull(result);
-        assertEquals(NameID.TRANSIENT, result.getFormat());
+        assertEquals(NameIDType.TRANSIENT, result.getFormat());
         assertEquals("casuser", result.getValue());
     }
 
-    private void verifyNameIdByFormat(final String format) {
+    private void verifyNameIdByFormat(final String format) throws Exception {
         val authnRequest = mock(AuthnRequest.class);
         val issuer = mock(Issuer.class);
         when(issuer.getValue()).thenReturn("https://idp.example.org");
@@ -173,17 +323,23 @@ public class SamlProfileSamlNameIdBuilderTests extends BaseSamlIdPConfigurationT
         val service = new SamlRegisteredService();
         service.setServiceId("entity-id");
         service.setRequiredNameIdFormat(format);
-        val facade = mock(SamlRegisteredServiceServiceProviderMetadataFacade.class);
+        val facade = mock(SamlRegisteredServiceMetadataAdaptor.class);
         when(facade.getEntityId()).thenReturn(service.getServiceId());
-        val assertion = mock(Assertion.class);
-        when(assertion.getPrincipal()).thenReturn(new AttributePrincipalImpl("casuser"));
+        when(facade.getSupportedNameIdFormats()).thenReturn(CollectionUtils.wrapList(NameIDType.TRANSIENT, format));
 
-        when(facade.getSupportedNameIdFormats()).thenReturn(CollectionUtils.wrapList(NameID.TRANSIENT, format));
-        val result = samlProfileSamlNameIdBuilder.build(authnRequest, new MockHttpServletRequest(), new MockHttpServletResponse(),
-            assertion, service, facade, SAMLConstants.SAML2_POST_BINDING_URI, new MessageContext());
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(new MockHttpServletRequest())
+            .httpResponse(new MockHttpServletResponse())
+            .authenticatedAssertion(Optional.of(getAssertion()))
+            .registeredService(service)
+            .adaptor(facade)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val result = (NameID) samlProfileSamlNameIdBuilder.build(buildContext);
         assertNotNull(result);
         assertEquals(format, result.getFormat());
-        if (format.equals(NameID.TRANSIENT)) {
+        if (format.equals(NameIDType.TRANSIENT)) {
             assertNotEquals("casuser", result.getValue());
         } else {
             assertEquals("casuser", result.getValue());
