@@ -1,6 +1,6 @@
 package org.apereo.cas.support.saml.mdui;
 
-import org.apereo.cas.services.RegisteredService;
+import org.apereo.cas.services.WebBasedRegisteredService;
 import org.apereo.cas.web.flow.services.DefaultRegisteredServiceUserInterfaceInfo;
 
 import lombok.Getter;
@@ -15,6 +15,7 @@ import org.opensaml.saml.ext.saml2mdui.UIInfo;
 import org.opensaml.saml.saml2.metadata.LocalizedName;
 import org.opensaml.saml.saml2.metadata.LocalizedURI;
 
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -34,30 +35,19 @@ import java.util.stream.Collectors;
 @Getter
 public class SamlMetadataUIInfo extends DefaultRegisteredServiceUserInterfaceInfo {
 
+    @Serial
     private static final long serialVersionUID = -1434801982864628179L;
 
     private transient UIInfo uiInfo;
 
     private String locale;
 
-    /**
-     * Instantiates a new Simple metadata uI info.
-     *
-     * @param registeredService the registered service
-     * @param locale            browser preferred language
-     */
-    public SamlMetadataUIInfo(final RegisteredService registeredService, final String locale) {
+    public SamlMetadataUIInfo(final WebBasedRegisteredService registeredService, final String locale) {
         this(null, registeredService);
         this.locale = locale;
     }
 
-    /**
-     * Instantiates a new Simple mdui info.
-     *
-     * @param uiInfo            the ui info
-     * @param registeredService the registered service
-     */
-    public SamlMetadataUIInfo(final UIInfo uiInfo, final RegisteredService registeredService) {
+    public SamlMetadataUIInfo(final UIInfo uiInfo, final WebBasedRegisteredService registeredService) {
         super(registeredService);
         this.uiInfo = uiInfo;
     }
@@ -71,10 +61,10 @@ public class SamlMetadataUIInfo extends DefaultRegisteredServiceUserInterfaceInf
     private static Collection<String> getStringValues(final List<?> items) {
         val list = new ArrayList<String>(items.size());
         items.forEach(d -> {
-            if (d instanceof XSURI) {
-                list.add(((XSURI) d).getURI());
-            } else if (d instanceof XSString) {
-                list.add(((XSString) d).getValue());
+            if (d instanceof final XSURI value) {
+                list.add(value.getURI());
+            } else if (d instanceof final XSString value) {
+                list.add(value.getValue());
             }
         });
         return list;
@@ -88,22 +78,22 @@ public class SamlMetadataUIInfo extends DefaultRegisteredServiceUserInterfaceInf
      * @return the string value
      */
     private static String getLocalizedValues(final String locale, final List<?> items) {
-        val foundLocale = findLocale(StringUtils.defaultString(locale, "en"), items);
+        val foundLocale = findLocale(StringUtils.defaultIfBlank(locale, "en"), items);
         if (foundLocale.isPresent()) {
             return foundLocale.get();
         }
 
         if (!items.isEmpty()) {
-            val item = items.get(0);
+            val item = items.getFirst();
             var value = StringUtils.EMPTY;
-            if (item instanceof LocalizedName) {
-                value = ((LocalizedName) item).getValue();
+            if (item instanceof final LocalizedName instance) {
+                value = instance.getValue();
             }
-            if (item instanceof LocalizedURI) {
-                value = ((LocalizedURI) item).getURI();
+            if (item instanceof final LocalizedURI instance) {
+                value = instance.getURI();
             }
-            if (item instanceof XSString) {
-                value = ((XSString) item).getValue();
+            if (item instanceof final XSString instance) {
+                value = instance.getValue();
             }
             LOGGER.trace("Loading first available locale [{}]", value);
             return value;
@@ -115,8 +105,8 @@ public class SamlMetadataUIInfo extends DefaultRegisteredServiceUserInterfaceInf
         LOGGER.trace("Looking for locale [{}]", locale);
         val p = Pattern.compile(locale, Pattern.CASE_INSENSITIVE);
         return items.stream()
-            .filter(item -> item instanceof LocalizedName)
-            .map(item -> (LocalizedName) item)
+            .filter(LocalizedName.class::isInstance)
+            .map(LocalizedName.class::cast)
             .filter(item -> {
                 val xmlLang = item.getXMLLang();
                 return StringUtils.isNotBlank(xmlLang) && p.matcher(xmlLang).matches() && StringUtils.isNotBlank(item.getValue());
