@@ -21,10 +21,10 @@ import java.time.ZoneOffset;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * This is {@link BaseWebAuthnCredentialRepository}.
@@ -57,8 +57,8 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
 
     @Override
     public Collection<CredentialRegistration> getRegistrationsByUserHandle(final ByteArray handle) {
-        return load()
-            .filter(credentialRegistration -> handle.equals(credentialRegistration.getUserIdentity().getId()))
+        return stream()
+            .filter(registration -> handle.equals(registration.getUserIdentity().getId()))
             .collect(Collectors.toList());
     }
 
@@ -79,12 +79,14 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
     @Override
     public void updateSignatureCount(final AssertionResult result) {
         val username = result.getUsername();
-        val registration = getRegistrationByUsernameAndCredentialId(username, result.getCredentialId())
+        val registration = getRegistrationByUsernameAndCredentialId(username, result.getCredential().getCredentialId())
             .orElseThrow(() -> new NoSuchElementException(String.format("Credential \"%s\" is not registered to user \"%s\"",
-                result.getCredentialId(), username)));
+                result.getCredential().getCredentialId(), username)));
         val registrations = getRegistrationsByUsername(username);
         registrations.remove(registration);
-        registrations.add(registration.withSignatureCount(result.getSignatureCount()));
+        registrations.add(registration.withCredential(registration.getCredential().toBuilder()
+            .signatureCount(result.getSignatureCount())
+            .build()));
         update(username, new HashSet<>(registrations));
     }
 
@@ -113,7 +115,8 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
 
     @Override
     public Optional<RegisteredCredential> lookup(final ByteArray credentialId, final ByteArray userHandle) {
-        val registration = load()
+        val registration = stream()
+            .filter(Objects::nonNull)
             .filter(credReg -> credentialId.equals(credReg.getCredential().getCredentialId()))
             .findAny();
 
@@ -121,19 +124,20 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
             .credentialId(reg.getCredential().getCredentialId())
             .userHandle(reg.getUserIdentity().getId())
             .publicKeyCose(reg.getCredential().getPublicKeyCose())
-            .signatureCount(reg.getSignatureCount())
+            .signatureCount(reg.getCredential().getSignatureCount())
             .build()));
     }
 
     @Override
     public Set<RegisteredCredential> lookupAll(final ByteArray credentialId) {
-        return load()
+        return stream()
+            .filter(Objects::nonNull)
             .filter(reg -> reg.getCredential().getCredentialId().equals(credentialId))
             .map(reg -> RegisteredCredential.builder()
                 .credentialId(reg.getCredential().getCredentialId())
                 .userHandle(reg.getUserIdentity().getId())
                 .publicKeyCose(reg.getCredential().getPublicKeyCose())
-                .signatureCount(reg.getSignatureCount())
+                .signatureCount(reg.getCredential().getSignatureCount())
                 .build())
             .collect(Collectors.toSet());
     }
@@ -141,15 +145,15 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
     @Override
     public void clean() {
         try {
-            val webAuthn = properties.getAuthn().getMfa().getWebAuthn();
+            val webAuthn = properties.getAuthn().getMfa().getWebAuthn().getCore();
             val expirationDate = LocalDate.now(ZoneOffset.UTC)
                 .minus(webAuthn.getExpireDevices(), DateTimeUtils.toChronoUnit(webAuthn.getExpireDevicesTimeUnit()));
             LOGGER.debug("Filtering devices based on device expiration date [{}]", expirationDate);
 
             val expInstant = expirationDate.atStartOfDay(ZoneOffset.UTC).toInstant();
-            val removingDevices = load()
-                .filter(d -> d.getRegistrationTime().isBefore(expInstant))
-                .collect(Collectors.toList());
+            val removingDevices = stream()
+                .filter(Objects::nonNull)
+                .filter(d -> d.getRegistrationTime() != null && d.getRegistrationTime().isBefore(expInstant)).toList();
             if (!removingDevices.isEmpty()) {
                 LOGGER.debug("There are [{}] expired device(s) remaining in repository. Cleaning...", removingDevices.size());
                 removingDevices.forEach(device -> removeRegistrationByUsername(device.getUsername(), device));
@@ -158,13 +162,6 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
             LoggingUtils.error(LOGGER, e);
         }
     }
-
-    /**
-     * Load records as stream.
-     *
-     * @return the stream
-     */
-    protected abstract Stream<CredentialRegistration> load();
 
     /**
      * Update records by user.
