@@ -10,13 +10,13 @@ import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 
+import jakarta.annotation.Nonnull;
 import java.security.GeneralSecurityException;
 import java.security.cert.X509CRL;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Base class for all CRL-based revocation checkers.
@@ -63,10 +63,7 @@ public abstract class AbstractCRLRevocationChecker implements RevocationChecker 
     }
 
     @Override
-    public void check(final X509Certificate cert) throws GeneralSecurityException {
-        if (cert == null) {
-            throw new IllegalArgumentException("Certificate cannot be null.");
-        }
+    public void check(@Nonnull final X509Certificate cert) throws GeneralSecurityException {
         LOGGER.debug("Evaluating certificate revocation status for [{}]", CertUtils.toString(cert));
         val crls = getCRLs(cert);
 
@@ -91,9 +88,9 @@ public abstract class AbstractCRLRevocationChecker implements RevocationChecker 
             crls.removeAll(expiredCrls);
             LOGGER.debug("Valid CRLs [{}] found that are not expired yet", crls);
 
-            val revokedCrls = crls.stream().map(crl -> crl.getRevokedCertificate(cert)).filter(Objects::nonNull).collect(Collectors.toList());
+            val revokedCrls = crls.stream().map(crl -> crl.getRevokedCertificate(cert)).filter(Objects::nonNull).toList();
             if (revokedCrls.size() == crls.size()) {
-                val entry = revokedCrls.get(0);
+                val entry = revokedCrls.getFirst();
                 LOGGER.warn("All CRL entries have been revoked. Rejecting the first entry [{}]", entry);
                 throw new RevokedCertificateException(entry);
             }
